@@ -1,3 +1,12 @@
+2009-09-02  Sanel <karijes@users.sourceforge.net>
+
+	* src/Theme.cpp: better code for checking if scheme stuff is loaded
+	* src/tinyscheme/scheme.c: set proper retcode value when illegal token was
+	found
+	* test/theme.cpp:
+	* test/theme-bad.et: test for special case where tinyscheme code had to be
+	modified
+
 2009-09-01  Sanel <karijes@users.sourceforge.net>
 
 	* edelib/Theme.h:
